2009-09-25  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Some fixes to SUSE RPM.

	* conf/pandora_server.conf: Added some missing default values

	* lib/PandoraFMS/Config.pm: Added some missing default values.

	* util/tentacle_serverd, util/pandora_server: SUSE rc.status 
	addon. Need working, SUSE continues giving erratic problems inn
	startup :(

2009-09-22  Sancho Lerena <slerena@artica.es>

	* pandora_server_installer: Fixes some problems detecting Linux 
	(was skipping tentacle installation).

	* util/tentacle_serverd: Fixed some problems starting tentacle
	because short timeout after starting and because the unquoted grep.

 	* util/pandora_server: Incresed sleep time on start.

2009-09-21  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* pandora_server_installer: Fixed a few bugs on non-Linux platforms
	
	* util/pandora_server, util/tentacle_serverd: Didn't work on Linux 
	(Ubuntu). Fixed she-bang.

2009-09-21  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Fixed a few details.  

	* bin/pandora_server: Error handler needs to be reviewed, Enterprise 
	errors are too nasty :(

	* util/tentacle_serverd: Fixed LSB tags problems for RPM install

	* util/pandora_server: Fixed LSB tags problems and fix a bug who make
	script inusable :(

2009-09-18  Sancho Lerena <slerena@artica.es>

	*  util/pandora_db.pl: Minor improvements in script. Added 
	a switch for mode without compact.

	* util/pandora_server: Added higher sleep in restart mode to
	wait some busy threads to stop before start.

2009-09-16  Sancho Lerena <slerena@artica.es>
	
	* util/pandora_exec -> bin/pandora_exec: Moved.

	* pandora_server -> util/pandora_server: Moved.

	* plugins/pandora_loadgen.pl
	plugins/pandora_server_status.pl: New plugins for generate data
	and get Pandora FMS server status and load.

	* Config.pm, pandora_db.pl: Version update.

	* pandora_server.spec, 
	Makefile.PL, 
	pandora_server_installer: Updated paths and dependencies
